--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -68,20 +68,20 @@
     left: 15.3%;
 }
 
-.arrow {
+.arrowRight {
+  border: solid blue;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
-}
-
-.right {
-  border: solid blue;
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
 }
 
-.left {
+.arrowLeft {
   border: solid green;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
 }
